# startupdisk

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  start.sh
docs/: PROGRESS_ARCHITECTURE.md
startupdisk/: __init__.py  __main__.py  cli.py  creator.py  device_detector.py  file_dialog.py  gui.py  installer.py  partitioner.py  progress_utils.py  uefi_ntfs.py  writer.py
